--- a/front/chrome-extension/public/manifest.json
+++ b/front/chrome-extension/public/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["getSource.js"],
+      "js": ["drag.js"],
       "run_at": "document_idle",
       "all_frames": true
     }
