--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -15,7 +15,12 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsdom": "^26.1.0",
+    "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^6.0.1",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
