fix: stash pop 충돌 해결 및 병합 완료

--- a/front/chrome-extension/public/manifest.json
+++ b/front/chrome-extension/public/manifest.json
@@ -25,7 +25,8 @@
   ],
   "permissions": [
     "scripting",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "host_permissions": [
     "https://*/"
