--- a/docker-compose-fast.yml
+++ b/docker-compose-fast.yml
@@ -1,14 +1,17 @@
-services:
+version: '3.9'
 
+services:
   backend-ml:
     build:
       context: ./app/ML
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./app/ML:/app
     env_file:
       - ./app/ML/.env.prod
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
