--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,15 +12,15 @@ services:
     command: npx nodemon -L server.js
     restart: unless-stopped
 
-  backend-ml:
-    build:
-      context: ./app/ML
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./app/ML:/app
-    env_file:
-      - ./app/ML/.env.dev
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    restart: unless-stopped
+  # backend-ml:
+  #   build:
+  #     context: ./app/ML
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - ./app/ML:/app
+  #   env_file:
+  #     - ./app/ML/.env.dev
+  #   command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+  #   restart: unless-stopped
